--- a/internal/mockfilesystem/testdata/massdriver.yaml
+++ b/internal/mockfilesystem/testdata/massdriver.yaml
@@ -13,12 +13,35 @@ params:
   examples:
     - __name: Network
       resource_type: Network
+  required:
+    - resource_type
   properties:
     resource_name:
       type: string
       title: Resource Name
       description: An immutable name field
       $md.immutable: true
+    resource_type:
+      type: string
+      title: Resource Type
+      description: The type of resource
+    foo:
+      type: object
+      title: Foo
+      description: A map of Foos
+      required:
+        - bar
+      properties:
+        bar:
+          type: integer
+          title: A whole number
+          description: Testing numbers
+          default: 1
+        qux:
+          type: integer
+          title: A whole number that is not required
+          description: Testing numbers
+          minimum: 2
 
 connections:
   required:
