--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,8 +34,5 @@
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "go version",
 	// Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode",
-	"mounts": [
-		"source=/home/dwill/Work/colony-corp/massdriver,target=/workspaces/massdriver,type=bind,consistency=cached"
-	]
+	"remoteUser": "vscode"
 }
