--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -224,19 +224,36 @@ issues:
   # Default: 3
   max-same-issues: 50
 
+  exclude:
+    # These files are _incidentally_ duplicated.
+    - "(\\d+)-(\\d+) lines are duplicate of `cmd/infrastructure.go:(\\d+)-(\\d+)`"
+    - "(\\d+)-(\\d+) lines are duplicate of `cmd/application.go:(\\d+)-(\\d+)`"
+    # I get it, but this function name makes sense
+    - "cognitive complexity 28 of func `\\(\\*Bundle\\).LintParamsConnectionsNameCollision` is high \\(> 20\\)"
+
   exclude-rules:
+    # Allow unused params at the cobra command level
+    - linters: [revive]
+      text: "unused-parameter: parameter ('cmd'|'args') seems to be unused, consider removing or renaming it as _"
+    # GQL client autogens to artifactId and orgId
     - linters: [revive]
       text: "var-naming: var artifactId should be artifactID"
+    - linters: [revive]
+      text: "var-naming: (var|func parameter) orgId should be orgID"
+    - linters: [stylecheck]
+      text: "ST1003: func parameter orgId should be orgID"
     - source: "^//\\s*go:generate\\s"
       linters: [lll]
+    # Allow TODO for now
     - source: "(noinspection|TODO)"
-      linters: [godot]
+      linters: [godox]
     - source: "//noinspection"
       linters: [gocritic]
     - source: "^\\s+if _, ok := err\\.\\([^.]+\\.InternalError\\); ok {"
       linters: [errorlint]
     - path: "_test\\.go"
       linters:
+        - revive
         - bodyclose
         - dupl
         - funlen
