--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,28 +1,28 @@
 name: Generate release-artifacts
 on:
-  release:
-    types:
-      - created
-      - released
+  push:
+    # Pattern matched against refs/tags
+    tags:
+      - '*'
+
+permissions:
+  contents: write
+
 jobs:
-  generate:
-    name: Generate cross-platform builds
+  goreleaser:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        goos: [linux, darwin]
-        goarch: [amd64, arm64]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Release
-        uses: wangyoucao577/go-release-action@v1.31
+      - uses: actions/checkout@v3
         with:
-          overwrite: TRUE
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          goos: ${{ matrix.goos }}
-          goarch: ${{ matrix.goarch }}
-          goversion: 1.19
-          binary_name: mass
-          # ldflags is the canonical way of setting dynamic values (like version) at compile time
-          ldflags: -X github.com/massdriver-cloud/mass/internal/version.version=${{github.ref_name}} -X github.com/massdriver-cloud/mass/internal/version.gitSHA=${{github.sha}}
+          fetch-depth: 0
+      - run: git fetch --force --tags
+      - uses: actions/setup-go@v4
+        with:
+          go-version: 1.21
+      - uses: goreleaser/goreleaser-action@v4
+        with:
+          distribution: goreleaser
+          version: v1.20.0
+          args: release --clean
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
