Add name_template to goreleaser
Use - instead of _, retain same ordering of project, version, os, arch.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -32,10 +32,12 @@ archives:
   - id: linux-archives
     builds:
       - linux-build
+    name_template: "{{ .ProjectName }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}"
 
   - id: darwin-archives
     builds:
       - darwin-build
+    name_template: "{{ .ProjectName }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}"
 
 checksum:
   name_template: 'checksums.txt'
