Rework name prompts validation to match backend

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -259,3 +259,6 @@ issues:
         - wrapcheck
         - gocognit
         - cyclop
+    # Ignore the file, this is part of the prompt flow which isn't currently setup to be tested
+    - linters: [testpackage]
+      path: "pkg/bundle/prompt_test.go"
