--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -119,7 +119,9 @@ linters-settings:
     all: true
 
 linters:
-  disable-all: true
+  disable:
+    # temporarily disabled while we use replace for osteele/liquid in go.mod
+    - gomoddirectives
   enable:
     - errcheck # Errcheck is a program for checking for unchecked errors in go programs. These unchecked errors can be critical bugs in some cases
     - gosimple # Linter for Go source code that specializes in simplifying a code
@@ -151,7 +153,7 @@ linters:
     # - godot # Check if comments end in a period
     - goimports # In addition to fixing imports, goimports also formats your code in the same style as gofmt.
     # - gomnd # An analyzer to detect magic numbers.
-    - gomoddirectives # Manage the use of 'replace', 'retract', and 'excludes' directives in go.mod.
+    # - gomoddirectives # Manage the use of 'replace', 'retract', and 'excludes' directives in go.mod.
     - gomodguard # Allow and block list linter for direct Go module dependencies. This is different from depguard where there are different block types for example version constraints and module recommendations.
     - goprintffuncname # Checks that printf-like functions are named with f at the end
     - gosec # Inspects source code for security problems
