--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -162,7 +162,7 @@ linters:
     - nakedret # Finds naked returns in functions greater than a specified function length
     # - nestif # Reports deeply nested if statements
     - nilerr # Finds the code that returns nil even if it checks that the error is not nil.
-    - nilnil # Checks that there is no simultaneous return of nil error and an invalid value.
+    # - nilnil # Checks that there is no simultaneous return of nil error and an invalid value.
     - noctx # noctx finds sending http request without context.Context
     - nolintlint # Reports ill-formed or insufficient nolint directives
     # - nonamedreturns # Reports all named returns
